--- a/css/post.css
+++ b/css/post.css
@@ -11,7 +11,7 @@
 	flex-direction: column;
 }
 
-.side h6, .side p {
+.side h6 {
 	margin-bottom: 7px;
 }
 
@@ -31,20 +31,6 @@
 .content h1, .content h2, .content h3, .content h4, .content h5, .content h6, .content p, .content pre, .content img, .content ol, .content ul, .example {
 	width: 100%;
 	margin-bottom: 35px;
-}
-
-pre {
-	padding: 14px;
-}
-
-pre code {
-	padding: 0;
-	border-radius: 0;
-}
-
-code {
-	padding: 2px;
-	border-radius: 3.5px;
 }
 
 ol, ul {
