--- a/template/post.html
+++ b/template/post.html
@@ -44,7 +44,7 @@
 			</div>
 			<div class="main">
 				<div class="side">
-					<h6>Documentation</h6>
+					<h6>DOCUMENTATION</h6>
 					{{#each posts.doc}}
 					{{#ifeq @root.file file}}
 					<p><a id="active" href="./{{file}}">{{title}}</a></p>
