--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 html, body {
-	background: url("../img/stars.png"), linear-gradient(hsl(260, 100%, 6%), hsl(200, 100%, 6%)) fixed;
+	background: url("/moon/img/stars.png"), linear-gradient(hsl(260, 100%, 6%), hsl(200, 100%, 6%)) fixed;
 	color: hsl(0, 0%, 100%);
 }
 
