--- a/css/post.css
+++ b/css/post.css
@@ -1,3 +1,4 @@
+/*
 .main {
 	margin-top: 36px;
 	justify-content: space-between;
@@ -52,3 +53,4 @@ ol, ul {
 	background-color: hsl(0, 0%, 88%);
 	border-radius: 3px;
 }
+*/
