--- a/template/index.html
+++ b/template/index.html
@@ -63,12 +63,13 @@
 			<h2>Functional & Declarative</h2>
 			<p>In Moon, web applications are treated as functions that take driver inputs and return driver outputs. Drivers handle the interface between the output of your application and the browser so that it can stay pure and declarative.</p>
 			<p>On the contrary, other popular frameworks claim to be "declarative" but only treat the view as a function of state. However, they treat other ideas such as local component state or effects as afterthoughts, requiring imperative and impure code.</p>
-			<p><a href="/play#const%20button%20%3D%20Moon.view.m.button%3B%0A%0Aconst%20increment%20%3D%20(%7B%20data%20%7D)%20%3D%3E%20%7B%0A%09const%20dataNew%20%3D%20data%20%2B%201%3B%0A%0A%09return%20%7B%0A%09%09data%3A%20dataNew%2C%0A%09%09view%3A%20%3CView%20data%3DdataNew%2F%3E%0A%09%7D%3B%0A%7D%3B%0A%0Aconst%20View%20%3D%20(%7B%20data%20%7D)%20%3D%3E%0A%09%3Cbutton%20%40click%3Dincrement%3E%7Bdata%7D%3C%2Fbutton%3E%3B%0A%0AMoon.use(%7B%0A%09data%3A%20Moon.data.driver%2C%0A%09view%3A%20Moon.view.driver(%22%23root%22)%0A%7D)%3B%0A%0AMoon.run(()%20%3D%3E%20(%7B%0A%09data%3A%200%2C%0A%09view%3A%20%3CView%20data%3D0%2F%3E%0A%7D))%3B">Try it!</a></p>
 		</div>
 
 		<div class="s-x-26 m-y-5">
-			<pre class="s-x-26 s-b-2 p-x-4 p-y-4"><code><%- options.highlight(`const increment = ({ data }) => {
-const dataNew = data + 1;
+			<%- options.play(`const button = Moon.view.m.button;
+
+const increment = ({ data }) => {
+	const dataNew = data + 1;
 
 	return {
 		data: dataNew,
@@ -79,15 +80,15 @@ const dataNew = data + 1;
 const View = ({ data }) =>
 	<button @click=increment>{data}</button>;
 
-	Moon.use({
-		data: Moon.data.driver,
-		view: Moon.view.driver("#root")
-	});
+Moon.use({
+	data: Moon.data.driver,
+	view: Moon.view.driver("#root")
+});
 
 Moon.run(() => ({
 	data: 0,
 	view: <View data=0/>
-}));`, "js") %></code></pre>
+}));`, "js") %>
 		</div>
 
 		<div class="a-b"></div>
