--- a/template/index.html
+++ b/template/index.html
@@ -100,8 +100,8 @@ Moon.run(() => ({
 		</div>
 
 		<div class="s-x-26 m-y-5">
-			<img src="/img/size.png" alt="Sizes of popular frameworks relative to Moon."/>
-			<a href="https://rawgit.com/krausest/js-framework-benchmark/master/webdriver-ts-results/table.html" class="b-n"><img src="/img/speed.png" alt="Performance of popular frameworks relative to Moon."/></a>
+			<img src="/img/size.png" alt="Sizes of popular frameworks relative to Moon." class="s-x-26 s-y-20"/>
+			<a href="https://rawgit.com/krausest/js-framework-benchmark/master/webdriver-ts-results/table.html" class="b-n"><img src="/img/speed.png" alt="Performance of popular frameworks relative to Moon." class="s-x-26 s-y-20"/></a>
 		</div>
 
 		<div class="a-b"></div>
